Add JS button to application forms that copy all questions, headers and help text to clipboard.

--- a/hypha/apply/funds/templates/funds/reset_network_application_base.html
+++ b/hypha/apply/funds/templates/funds/reset_network_application_base.html
@@ -73,6 +73,8 @@
     <script src="{% static 'js/apply/mailgun-validator.js' %}"></script>
     <script src="{% static 'js/apply/file-uploads.js' %}"></script>
     <script src="{% static 'js/apply/tinymce-word-count.js' %}"></script>
+    <script src="{% static 'js/reset-network/reset-submission-form-copy.js' %}"></script>
+    <script src="{% static 'js/apply/application-form-links-new-window.js' %}"></script>
     {% if not show_all_group_fields %}
     <script src="{% static 'js/apply/form-group-toggle.js' %}"></script>
     {% endif %}
