add 'category' field to resource and replace hardcoded [Article] reference in template with this value

--- a/hypha/reset_network/reset_network_resources/templates/reset_network_resources/reset_network_resource_page.html
+++ b/hypha/reset_network/reset_network_resources/templates/reset_network_resources/reset_network_resource_page.html
@@ -12,7 +12,7 @@
     <div class="para__content">
 
       <div class="resource-head">
-        <div class="resource-head__type">[Article]</div>
+        <div class="resource-head__type">{% if page.category %}[{{ page.category }}]{% endif %}</div>
         <h1 class="resource-head__title">{{ page.content_heading }}</h1>
 
         <div class="resource-head__image">
